crates/oxc_linter/src/snapshots/eslint_no_unused_vars@oxc-arguments.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ eslint(no-unused-vars): Parameter 'a' is declared but never used. Unused parameters should start with a '_'.
   ╭─[no_unused_vars.tsx:1:14]
 1 │ function foo(a) {} foo()
   ·              ┬
   ·              ╰── 'a' is declared here
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Parameter '_' is declared but never used.
   ╭─[no_unused_vars.tsx:1:47]
 1 │ window.addEventListener('logModel', function (_) { doSomething() })
   ·                                               ┬
   ·                                               ╰── '_' is declared here
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Parameter 'a' is declared but never used. Unused parameters should start with a '_'.
   ╭─[no_unused_vars.tsx:1:14]
 1 │ function foo(a: number) {} foo()
   ·              ┬
   ·              ╰── 'a' is declared here
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Parameter 'a' is declared but never used.
   ╭─[no_unused_vars.tsx:1:16]
 1 │ function foo({ a }, b) { return b } foo()
   ·                ┬
   ·                ╰── 'a' is declared here
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Parameter 'args' is declared but only used as a type. Unused parameters should start with a '_'.
   ╭─[no_unused_vars.tsx:1:17]
 1 │ function foo(...args: typeof args) {} foo()
   ·                 ──┬─
   ·                   ╰── 'args' is declared here
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Parameter 'args' is declared but only used as a type. Unused parameters should start with a '_'.
   ╭─[no_unused_vars.tsx:1:17]
 1 │ function foo(...args: unknown[]): args is string[] { return true } foo()
   ·                 ──┬─
   ·                   ╰── 'args' is declared here
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Parameter 'unused' is declared but never used. Unused parameters should match /^ignored/.
   ╭─[no_unused_vars.tsx:1:17]
 1 │ function foo(...unused) {} foo()
   ·                 ───┬──
   ·                    ╰── 'unused' is declared here
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Parameter 'args' is declared but never used.
   ╭─[no_unused_vars.tsx:1:17]
 1 │ function foo(...args) { return 1 } foo()
   ·                 ──┬─
   ·                   ╰── 'args' is declared here
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Parameter 'args' is declared but never used.
   ╭─[no_unused_vars.tsx:1:17]
 1 │ function foo(...args: unknown[]) { return 1 } foo()
   ·                 ──┬─
   ·                   ╰── 'args' is declared here
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Variable 'count' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let count = 0; function foo(c = (count++, 0)) { console.log(c) } foo()
   ·     ──┬──                        ──┬──
   ·       │                            ╰── it was last assigned here
   ·       ╰── 'count' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Parameter 'a' is declared but never used.
   ╭─[no_unused_vars.tsx:1:14]
 1 │ function foo(a, ...[_ignored]) {} foo()
   ·              ┬
   ·              ╰── 'a' is declared here
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Parameter 'a' is declared but never used. Unused parameters should start with a '_'.
   ╭─[no_unused_vars.tsx:1:14]
 1 │ function foo(a, ...{b, ..._ignored}) {} foo()
   ·              ┬
   ·              ╰── 'a' is declared here
   ╰────
  help: Consider removing this parameter.
