crates/oxc_linter/src/snapshots/eslint_no_unused_vars@oxc-enums.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint(no-unused-vars): Enum 'Foo' is declared but never used.
   ╭─[no_unused_vars.tsx:1:6]
 1 │ enum Foo { A }
   ·      ─┬─
   ·       ╰── 'Foo' is declared here
   ╰────
  help: Consider removing this declaration.
